[package]
name = "mina_nft_cli"
version = "0.1.0"
edition = "2021"
authors = ["Jefferson Lopes <mfljefferson@gmai.com>"]
description = "CLI tool to find details about NFT owners of the Mina NFT Digital Collection 1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nft_shared = {path = "../nft_shared"}
clap = { version = "3.2.6", features = ["derive"] }
serde_json = "1.0.81"
tokio = { version = "1.17.0", default-features = true, features = ["full"]}