[package]
name = "nft_api"
version = "0.1.0"
edition = "2021"
authors = ["mfljefferson@example.com"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nft_shared = {path = "../nft_shared"}
actix-web = "4"
tokio = { version = "1.17.0", default-features = true, features = ["full"]}
serde_json = "1.0.81"
serde = "1.0.137"