[package]
name = "nft_shared"
version = "0.1.0"
edition = "2021"
authors = ["mfljefferson@example.com"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
web3 = { git = "https://github.com/tomusdrw/rust-web3.git" }
tokio = { version = "1.17.0", default-features = true, features = ["full"]}
hex-literal = "0.3.4"
ethcontract = "0.17.0"
futures = "0.3"
serde_json = "1.0.81"
ethabi = "17.1.0"
serde = "1.0.137"